# NetworkedConnect4

./: .gitignore  CMakeLists.txt  README.md  endianness.cpp  endianness.h  game.cpp  game.h  main.cpp  serialization.cpp  serialization.h  tests.cpp
GameLogic/: board.cpp  board.h  piece.cpp  piece.h
Networking/: Networking.cpp  Networking.h
Packets/: Packets.h
simplesock/: socklib_win32.cpp
